<resources>
    <string name="app_name">Sustentacao</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_cio">Início</string>
    <string name="doa_o">Doação</string>
    <string name="doa_o2">Doação</string>
    <string name="doa_o3">Doação</string>
    <string name="doa_o4">Doação</string>
    <string name="nome_do_doador">Nome do Doador</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="retirada">Retirada</string>
    <string name="nome_do_doador2">Nome do Doador</string>
    <string name="_00_00_002">00:00:00</string>
    <string name="retirada2">Retirada</string>
    <string name="nome_do_doador3">Nome do Doador</string>
    <string name="_00_00_003">00:00:00</string>
    <string name="retirada3">Retirada</string>
    <string name="nome_do_doador4">Nome do Doador</string>
    <string name="_00_00_004">00:00:00</string>
    <string name="retirada4">Retirada</string>
    <string name="autor">Autor</string>
    <string name="nome_do_evento">Nome do Evento</string>
    <string name="descri_o">Descrição</string>
    <string name="tema">Tema</string>
    <string name="data">Data</string>
    <string name="user_image">user_image</string>
    <string name="data_e_hora">Data e Hora</string>
    <string name="autor2">Autor</string>
    <string name="descri_o2">Descrição</string>
    <string name="nome_do_evento2">Nome do evento</string>
    <string name="link_da_imagem">Link da imagem</string>
    <string name="postar">Postar</string>
    <string name="image_circle">image_circle</string>
    <string name="insira_seu_e_mail">Insira seu E-mail</string>
    <string name="insira_sua_senha">Insira sua senha</string>
    <string name="email">EMAIL</string>
    <string name="senha">SENHA</string>
    <string name="entrar">ENTRAR</string>
    <string name="voc_ainda_n_o_t_m_uma_conta">Você ainda não têm uma conta?</string>
    <string name="crie_aqui">CRIE AQUI!</string>
    <string name="esqueceu_a_senha">Esqueceu a Senha?</string>
    <string name="login">LOGIN</string>
</resources>