<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/user_image"
            app:srcCompat="@drawable/imagem" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:background="#E7F7F4"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/doacao_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:hint="@string/doa_o"
                    android:textColorHint="#2E2E2E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nome_doador1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:hint="@string/nome_do_doador"
                    android:textColorHint="#2E2E2E"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hora_retirada1"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="end"
                    android:hint="@string/_00_00_00"
                    android:textColorHint="#2E2E2E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/retirada1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/retirada"
                    android:textSize="11sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#E7F7F4"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/doacao_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:hint="@string/doa_o2"
                    android:textColor="#2E2E2E"
                    android:textColorHint="#2E2E2E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nome_doador2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:hint="@string/nome_do_doador2"
                    android:textColorHint="#2E2E2E"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hora_retirada2"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="end"
                    android:hint="@string/_00_00_002"
                    android:textColorHint="#2E2E2E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/retirada2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/retirada2"
                    android:textSize="11sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#E7F7F4"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            >


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/doacao_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:hint="@string/doa_o3"
                    android:textColor="#2E2E2E"
                    android:textColorHint="#2E2E2E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nome_doador3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:hint="@string/nome_do_doador3"
                    android:textColorHint="#2E2E2E"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hora_retirada3"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="end"
                    android:hint="@string/_00_00_003"
                    android:textColorHint="#2E2E2E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/retirada3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/retirada3"
                    android:textSize="11sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E7F7F4"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/doacao_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:hint="@string/doa_o4"
                    android:textColor="#2E2E2E"
                    android:textColorHint="#2E2E2E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nome_doador4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:hint="@string/nome_do_doador4"
                    android:textColorHint="#2E2E2E"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hora_retirada4"
                    android:layout_width="321dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:gravity="end"
                    android:hint="@string/_00_00_004"
                    android:textColorHint="#2E2E2E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/retirada4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/retirada4"
                    android:textSize="11sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>